# django-blog

./: .gitignore  Dockerfile  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
articles/: 5xcamp_beginning.md  5xcamp_notice.md
core/: .env.example  settings.py  urls.py  views.py
core/management/commands/: create_superuser.py
posts/: admin.py  forms.py  models.py  urls.py  views.py
posts/management/commands/: create_superuser.py
posts/migrations/: 0001_initial.py  0002_tag_remove_post_tag_alter_post_published_at.py  0003_post_tags.py  0004_alter_post_options_alter_tag_options_post_slug_and_more.py  0005_alter_post_content.py  0006_image.py  0007_alter_image_image.py  0008_remove_image_post.py  0009_video_alter_image_options_alter_image_image.py
posts/templatetags/: post_filters.py  post_preview.py
src/scripts/: input.js
templates/account/: login.html  signup.html
templates/core/: about.html  home.html
templates/errors/: 404.html
templates/posts/: create.html  detail.html  list.html  update.html
templates/shared/: base.html  footer.html  header.html  social_links.html
templates/users/: login.html  register.html  update.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
