[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Chien Chuan Wang <chien@chienchuan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-allauth = {extras = ["socialaccount"], version = "^0.63.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
