[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["chienchuanw <chienchuanwww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-allauth = {extras = ["socialaccount"], version = "^0.63.2"}
django-environ = "^0.11.2"
markdown = "^3.6"
whitenoise = "^6.7.0"
pygments = "^2.18.0"
django-markdownx = "^4.0.7"
gunicorn = "^22.0.0"
pillow = "^10.4.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
